--- a/compose.yaml
+++ b/compose.yaml
@@ -3,7 +3,7 @@ services:
     image: ghcr.io/e3ndr/tor-clearnet:latest
     restart: unless-stopped
     environment:
-      DOMAINS: "example.com"
+      SERVICE_NAME: "My TorClearnet Proxy"
       BLOCKLISTS: "ahmia"
       SOCKS_PROXY: "tor-simple"
       SOCKS_PORT: "9050"
