--- a/compose.yaml
+++ b/compose.yaml
@@ -4,6 +4,7 @@ services:
     restart: unless-stopped
     environment:
       SERVICE_NAME: "My TorClearnet Proxy"
+      DOMAINS: ".example.com"
       BLOCKLISTS: "ahmia"
       SOCKS_PROXY: "tor-simple"
       SOCKS_PORT: "9050"
